# src/routes/auth.route.js
@@ -2,6 +2,6 @@ import { Router } from "express";
 import authController from "../controllers/auth.controller.js";
 const router = Router();
 
-router.post("/", authController.login);
+router.post("/login", authController.login);
 
 export default router;
