# src/routes/news.route.js
@@ -4,15 +4,15 @@ import { authMiddleware } from "../middleware/auth.middleware.js";
 
 const router = Router();
 
-router.post("/", authMiddleware, newsController.createPostController);
+router.post("/createPost", authMiddleware, newsController.createPostController);
 
-router.get("/", newsController.getAllPostController);
+router.get("/getAllPosts", newsController.getAllPostController);
 router.get("/top", newsController.topPostsController);
 router.get("/search", newsController.searchPostsController);
 router.get("/byUser", authMiddleware, newsController.getPostUserController);
-router.get("/:id", authMiddleware, newsController.findPostByIdController);
+router.get("/findPostById/:id", authMiddleware, newsController.findPostByIdController);
 
-router.patch("/:id", authMiddleware, newsController.updatePostController);
+router.patch("/updatePost/:id", authMiddleware, newsController.updatePostController);
 router.patch("/like/:id", authMiddleware, newsController.likePostControler);
 router.patch(
   "/comment/:id",
@@ -20,7 +20,7 @@ router.patch(
   newsController.commentAddControler
 );
 
-router.delete("/:id", authMiddleware, newsController.deletePostController);
+router.delete("/deletePost/:id", authMiddleware, newsController.deletePostController);
 router.delete("/comment/:idNews/:idComment", authMiddleware, newsController.deleteCommentPostController);
 
 export default router;
