# src/routes/user.route.js
@@ -4,10 +4,10 @@ import { validId, validUser } from "../middleware/global.middleware.js";
 
 const route = Router();
 
-route.post("/", userController.create);
-route.get("/", userController.findAll);
-route.get("/:id", validId, validUser, userController.findById);
-route.patch("/:id", validId, validUser, userController.updateUser);
-route.delete("/:id", validId, validUser, userController.deleteUser);
+route.post("/create", userController.create);
+route.get("/findall", userController.findAll);
+route.get("/findbyid/:id", validId, validUser, userController.findById);
+route.patch("/updateuser/:id", validId, validUser, userController.updateUser);
+route.delete("/deleteuser/:id", validId, validUser, userController.deleteUser);
 
 export default route;
